#
# Copyright 2020 GoPro Inc.
#
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#

option('gbackend-gl', type: 'feature', value: 'auto')

option('wayland', type: 'feature', value: 'auto',
       description: 'Wayland support')
option('vaapi-x11', type: 'feature', value: 'auto',
       description: 'VAAPI support for X11')
option('vaapi-wayland', type: 'feature', value: 'auto',
       description: 'VAAPI support for Wayland')

option('rpath', type: 'boolean', value: false,
       description: 'install with rpath')
option('small', type: 'boolean', value: false,
       description: 'exclude all the documentation strings from the binary')
option('tests', type: 'boolean', value: true)

option('logtrace', type: 'boolean', value: false,
       description: 'log tracing (slow and verbose)')
option('debug_opts', type: 'array', choices: ['gl', 'mem', 'scene', 'gpu_capture'], value: [],
       description: 'debugging options for developers')

option('renderdoc_dir', type: 'string',
       description: 'Renderdoc directory')
